# OpenMAIC

./: .gitignore  package.json  pnpm-lock.yaml
.github/workflows/: build-desktop.yml
desktop-dist/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
