[package]
name = "openmaic"
version = "0.1.1"
description = "OpenMAIC - Open Multi-Agent Interactive Classroom"
authors = ["THU-MAIC"]
edition = "2021"

[lib]
name = "openmaic_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
